@@ -9,5 +9,5 @@ Description: Library for speedy data storage, retrieval, and compression
 Version: @VERSION@
 Libs: -L${libdir} -leet
 Libs.private: @EET_LIBS@ @EFL_FNMATCH_LIBS@ @LIBGCRYPT_LIBS@ -ljpeg -lz -lm
-Cflags: -I${includedir}
+Cflags: -I${includedir}/eet-@VMAJ@
 Cflags.private: @LIBGCRYPT_CFLAGS@
